--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "phaserjs-typescript-boilerplate",
+  "name": "town-generator",
   "version": "1.0.0",
-  "description": "Ready to use PhaserJS + Typescript game scene",
+  "description": "Tool for generating Towns",
   "main": "src/index.ts",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html --experimental-scope-hoisting",
-    "lint": "eslint \"src/**/*.{js,ts}\" --fix"
+    "lint": "eslint \"src/**/*.{js,ts}\" --fix && prettier --write \"**/*.{ts,js,json,css,md}\""
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "eslint \"**/*.ts\" --fix && prettier --write \"**/*.{ts,js,json,css,md}\" && git add"
-    }
-  },
-  "author": "Victor Nogueira <victor@victornogueira.app>",
+  "author": "Jack Pyro",
   "license": "MIT",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.3.2",
@@ -21,7 +16,6 @@
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "husky": "^3.0.8",
     "parcel-bundler": "^1.12.3",
     "phaser": "^3.19.0",
     "prettier": "^1.18.2",
